--- a/aim-server/src/main/resources/application.properties
+++ b/aim-server/src/main/resources/application.properties
@@ -13,7 +13,8 @@ logging.level.root=info
 
 
 # 关闭健康检查权限
-management.security.enabled=false
+#management.security.enabled=false
+
 # SpringAdmin 地址
 spring.boot.admin.url=http://127.0.0.1:8888
 
@@ -25,7 +26,7 @@ monitor.channel.map.key=channelMap
 app.zk.switch=true
 
 # zk 地址
-app.zk.addr=ip:port
+app.zk.addr=127.0.0.1:2777
 
 # zk 连接超时时限
 app.zk.connect.timeout=15000
