--- a/aim-common/pom.xml
+++ b/aim-common/pom.xml
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
+            <version>3.8.0</version>
         </dependency>
 
         <dependency>
