--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <properties>
         <junit.version>4.12</junit.version>
         <netty.version>4.1.21.Final</netty.version>
-        <logback.version>1.0.13</logback.version>
+        <logback.version>1.2.3</logback.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <swagger.version>2.5.0</swagger.version>
@@ -48,27 +48,27 @@
             </dependency>
 
             <dependency>
-                <groupId>com.crossoverjie.netty</groupId>
-                <artifactId>cim-common</artifactId>
-                <version>1.0.1-SNAPSHOT</version>
+                <groupId>org.example</groupId>
+                <artifactId>aim-common</artifactId>
+                <version>1.0-SNAPSHOT</version>
             </dependency>
 
             <dependency>
-                <groupId>com.crossoverjie.netty</groupId>
-                <artifactId>cim-rout-api</artifactId>
-                <version>1.0.1-SNAPSHOT</version>
+                <groupId>org.example</groupId>
+                <artifactId>aim-route-api</artifactId>
+                <version>1.0-SNAPSHOT</version>
             </dependency>
 
             <dependency>
-                <groupId>com.crossoverjie.netty</groupId>
-                <artifactId>cim-server-api</artifactId>
-                <version>1.0.1-SNAPSHOT</version>
+                <groupId>org.example</groupId>
+                <artifactId>aim-server-api</artifactId>
+                <version>1.0-SNAPSHOT</version>
             </dependency>
 
             <dependency>
                 <groupId>com.google.protobuf</groupId>
                 <artifactId>protobuf-java</artifactId>
-                <version>3.4.0</version>
+                <version>3.8.0</version>
             </dependency>
 
 
