--- a/aim-server/src/main/resources/application.properties
+++ b/aim-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=cim-server
+spring.application.name=aim-server
 
 # web port
 server.port=8081
@@ -16,7 +16,7 @@ logging.level.root=info
 #management.security.enabled=false
 
 # SpringAdmin 地址
-spring.boot.admin.url=http://127.0.0.1:8888
+#spring.boot.admin.url=http://127.0.0.1:8888
 
 #自定义监控端点 key
 monitor.channel.map.key=channelMap
