--- a/aim-forword-route/pom.xml
+++ b/aim-forword-route/pom.xml
@@ -25,12 +25,12 @@
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>aim-common</artifactId>
-            <exclusions>
-                <exclusion>
-                    <artifactId>log4j</artifactId>
-                    <groupId>log4j</groupId>
-                </exclusion>
-            </exclusions>
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <artifactId>log4j</artifactId>-->
+<!--                    <groupId>log4j</groupId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
         </dependency>
 
         <dependency>
