--- a/aim-forword-route/src/main/resources/application.properties
+++ b/aim-forword-route/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=cim-forward-route
+spring.application.name=aim-forward-route
 
 # web port
 server.port=8083
@@ -13,7 +13,7 @@ logging.level.root=info
 #management.security.enabled=false
 
 # zk 地址
-app.zk.addr=ip:port
+app.zk.addr=127.0.0.1:2777
 
 # zk 连接超时时限
 app.zk.connect.timeout=15000
