--- a/aim-client/src/main/resources/application.properties
+++ b/aim-client/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=aim-client
+spring.application.name=aim-client1
 
 # web port
-server.port=8082
+server.port=8071
 
 # 是否打开swagger
 swagger.enable = true
@@ -14,11 +14,11 @@ aim.msg.logger.path = /opt/logs/aim/
 
 ###=======本地模拟======###
 # route url suggested that this is Nginx address
-aim.route.url = http://localhost:8083/
+aim.route.url = http://localhost:8000/
 
 # 客户端唯一ID
-aim.user.id=1586617710861
-aim.user.userName=zhangsan
+aim.user.id=1600695071429
+aim.user.userName=liuwei
 
 # 回调线程队列大小
 aim.callback.thread.queue.size = 2
