--- a/aim-forword-route/src/main/resources/application.properties
+++ b/aim-forword-route/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=aim-forward-route
+spring.application.name=aim-forward-route1
 
 # web port
-server.port=8083
+server.port=8061
 
 # 是否打开swagger
 swagger.enable = true
@@ -9,11 +9,9 @@ swagger.enable = true
 logging.level.root=info
 
 
-# 关闭健康检查权限
-#management.security.enabled=false
 
 # zk 地址
-app.zk.addr=127.0.0.1:2777
+app.zk.addr=127.0.0.1:2181
 
 # zk 连接超时时限
 app.zk.connect.timeout=15000
@@ -22,16 +20,16 @@ app.zk.connect.timeout=15000
 app.zk.root=/route
 
 #路由策略，轮询
-#app.route.way=com.crossoverjie.cim.common.route.algorithm.loop.LoopHandle
+#app.route.way=com.goatlerbon.aim.common.route.algorithm.loop.LoopHandle
 
 #路由策略，随机
-#app.route.way=com.crossoverjie.cim.common.route.algorithm.random.RandomHandle
+#app.route.way=com.goatlerbon.aim.common.route.algorithm.random.RandomHandle
 
 #路由策略，一致性 hash
 app.route.way=com.goatlerbon.aim.common.route.algorithm.consistenthash.ConsistentHashHandle
 
 #一致性 hash 算法具体实现--自定义有序 map
-#app.route.way.consitenthash=com.crossoverjie.cim.common.route.algorithm.consistenthash.SortArrayMapConsistentHash
+#app.route.way.consitenthash=com.goatlerbon.aim.common.route.algorithm.consistenthash.SortArrayMapConsistentHash
 
 #一致性 hash 算法具体实现--TreeMap
 app.route.way.consitenthash=com.goatlerbon.aim.common.route.algorithm.consistenthash.TreeMapConsistentHash
