--- a/aim-server/src/main/resources/application.properties
+++ b/aim-server/src/main/resources/application.properties
@@ -19,14 +19,14 @@ logging.level.root=info
 #spring.boot.admin.url=http://127.0.0.1:8888
 
 #自定义监控端点 key
-monitor.channel.map.key=channelMap
+#monitor.channel.map.key=channelMap
 
 
 # 是否注册 zk
 app.zk.switch=true
 
 # zk 地址
-app.zk.addr=127.0.0.1:2777
+app.zk.addr=127.0.0.1:2181
 
 # zk 连接超时时限
 app.zk.connect.timeout=15000
@@ -35,7 +35,8 @@ app.zk.connect.timeout=15000
 app.zk.root=/route
 
 # 路由url建议这是Nginx地址
-aim.route.url=http://localhost:8083/
+#是nginx 地址
+aim.route.url=http://localhost:8000/
 
 # 检测多少秒没有收到客户端心跳后服务端关闭连接 单位秒
 aim.heartbeat.time = 30
