--- a/aim-client/src/main/resources/application.properties
+++ b/aim-client/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=aim-client1
+spring.application.name=aim-client2
 
 # web port
-server.port=8071
+server.port=8072
 
 # 是否打开swagger
 swagger.enable = true
@@ -17,8 +17,8 @@ aim.msg.logger.path = /opt/logs/aim/
 aim.route.url = http://localhost:8000/
 
 # 客户端唯一ID
-aim.user.id=1600695071429
-aim.user.userName=liuwei
+aim.user.id=1600760447198
+aim.user.userName=lilei
 
 # 回调线程队列大小
 aim.callback.thread.queue.size = 2
